@@ -1,3 +1,13 @@
+2005-01-31  Jens Alfke  <set EMAIL_ADDRESS environment variable>
+
+        Reviewed by John.
+
+	- Fixed <rdar://problem/3903199> REGRESSION: Large background patterns slide around while loading
+
+        * WebCoreSupport.subproj/WebImageData.m:
+        (drawPattern):
+        (-[WebImageData tileInRect:fromPoint:context:]):
+
 2005-01-30  Darin Adler  <darin@apple.com>
 
         Reviewed by John.
